fixed texttt and textsf

--- a/beapi.tex
+++ b/beapi.tex
@@ -76,7 +76,7 @@ public boolean repOK() {
     return true;
 }
 \end{lstlisting}
-\caption{\texttt{repOK} de \texttt{NodeCachingLinkedList} tomado del benchmark de \textsf{ROOPS}}
+\caption{\texttt{repOK} de \texttt{NodeCachingLinkedList} tomado del benchmark de \texttt{ROOPS}}
 \label{fig:NCL-repOK}
 \end{figure}
 Las herramientas de generación exhaustiva acotada existentes, como \emph{Korat},
