--- a/related.tex
+++ b/related.tex
@@ -53,7 +53,7 @@ tal como se reporta en diversos trabajos previos
 \cite{Marinov01,Khurshid01,Boyapati02,Sullivan04}. Un objetivo de esta tesis no es 
 revisar nuevamente la efectividad de las técnicas exhaustivas acotadas, sino
 presentar un enfoque que resulte sencillo de aplicar sobre software existente,
-como lo es \texttt{BEAPI}, que no requiere 
+como lo es \textsf{BEAPI}, que no requiere 
 la provisión manual de especificaciones formales que capturen las propiedades
 que deben cumplir las estructuras.
 
@@ -76,7 +76,7 @@ en un estilo que en el otro. Si las especificaciones provistas son precisas, amb
 pueden ser utilizados para la generación exhaustiva acotada. Sin embargo, para utilizarlos los desarrolladores deben 
 estar familiarizados con ambos estilos de especificación, y dedicar el tiempo y
 esfuerzo necesarios para escribir dichas especificaciones (a diferencia de
-\texttt{BEAPI} que no requiere especificaciones adicionales).
+\textsf{BEAPI} que no requiere especificaciones adicionales).
 
 Los \emph{model checkers} para software como \textsf{Java Pathfinder}
 \cite{Visser05} (\textsf{JPF}) también pueden realizar una generación exhaustiva
