--- a/tables/randoopvsBuilders.tex
+++ b/tables/randoopvsBuilders.tex
@@ -3,7 +3,7 @@
   \centering
   \begin{tabular}{ c  r  r r r r  }
     \toprule
-    \textbf{GTime} & \textbf{Herramienta} &  \textbf{Test} & \textbf{T(Seg)} & \textbf{Ramas}  & \textbf{Mutacion} \\ 
+  \textbf{GTime/Scope} & \textbf{Herramienta} &  \textbf{Test/Obj} & \textbf{Time} & \textbf{Ramas}  & \textbf{Mutacion} \\ 
     \midrule
   30	&	Randoop	 &  2534 & 8   & 75 	& 89   \\
   & RSer-API	&  22083/309162  &  10  &  78	& 91   \\
@@ -32,7 +32,7 @@
   \centering
   \begin{tabular}{ c  r  r r r r  }
     \toprule
-    \textbf{GTime} & \textbf{Tool} &  \textbf{Test} & \textbf{T(Seg)} & \textbf{Ramas}  & \textbf{Mutacion} \\ 
+  \textbf{GTime/Scope} & \textbf{Herramienta} &  \textbf{Test/Obj} & \textbf{Time} & \textbf{Ramas}  & \textbf{Mutacion} \\ 
     \midrule
 
 
@@ -62,7 +62,7 @@
 \centering
   \begin{tabular}{ c  r  r r r r  }
   \toprule
-  \textbf{GTime} & \textbf{Tool} & \textbf{Test}&\textbf{T(Seg)} &\textbf{Ramas}  & \textbf{Mutacion} \\ 
+  \textbf{GTime/Scope} & \textbf{Herramienta} &  \textbf{Test/Obj} & \textbf{Time} & \textbf{Ramas}  & \textbf{Mutacion} \\ 
   \midrule
 30	&	Randoop	 &   3146 &   7  & 31 	&  58  \\
 & RSer-API	&   15868/238020 & 3   &  120 	& 100    \\
@@ -90,7 +90,7 @@
 \centering
   \begin{tabular}{ c  r  r r r r  }
   \toprule
-  \textbf{GTime} & \textbf{Tool} & \textbf{Objectos}&\textbf{T(Seg)} &\textbf{Ramas}  & \textbf{Mutacion} \\ 
+  \textbf{GTime/Scope} & \textbf{Herramienta} &  \textbf{Test/Obj} & \textbf{Time} & \textbf{Ramas}  & \textbf{Mutacion} \\ 
   \midrule
 30	&	Randoop	 &  2612  &   9 & 47 	&  49  \\
 & RSer-API	&  10963/317927  &   14 &  49	&   56 \\
@@ -118,7 +118,7 @@
 \centering
   \begin{tabular}{ c  r  r r r r  }
   \toprule
-  \textbf{GTime} & \textbf{Tool} & \textbf{Test}&\textbf{T(Seg)} &\textbf{Ramas}  & \textbf{Mutacion} \\ 
+  \textbf{GTime/Scope} & \textbf{Herramienta} &  \textbf{Test/Obj} & \textbf{Time} & \textbf{Ramas}  & \textbf{Mutacion} \\ 
   \midrule
 30	&	Randoop	 &  86  &  2  &  48	&  66  \\
 & RSer-API	&  5373/145071  & 28   &  107	& 120   \\
