--- a/experimental.tex
+++ b/experimental.tex
@@ -139,7 +139,7 @@ estas ejecuciones. En el caso particular de la función objetivo basada en
 generación exhaustiva, no fue necesario realizar múltiples repeticiones, dado
 que dicha evaluación es determinística bajo una misma configuración. \pp{No estoy de acuerdo con esto. El algoritmo genético es aleatorio
 independientemente de la fitness que use. Todos hay que ejecutarlos múltiples
-veces. Hablémoslo.}
+veces. Hablemoslo.}
 \cacho{Otra version, no se si estoy en lo correcto:}
 \cacho{
 En el caso particular de la función objetivo basada en generación exhaustiva, 
@@ -218,7 +218,7 @@ Comparando las funciones objetivo, \textsf{FGE}
 es más rápida que \textsf{FRC}. En \textsf{GA}, FRC requiere en promedio
 unas siete veces más tiempo que \textsf{FGE}; en \textsf{HC}, \textsf{FRC} requiere unas casi 32 veces
 más tiempo que \textsf{FGE}. La función objetivo \textsf{FGE} debido a que para
-computar MGO en nuestos casos de estudio es suficiente con generar objetos de tamaño 
+computar MGO en nuestros casos de estudio es suficiente con generar objetos de tamaño 
 relativamente pequeño (scope 5). Además, \textsf{FGE} utiliza BEAPI (\cacho{ver
 capítulo \ref{cap:beapi}}), que implementa mecanismos que hacen a la
 generación acotada más eficiente (generación guiada por el feedback de la
@@ -237,7 +237,7 @@ Por otra parte, la función objetivo \textsf{FRC} tiene la ventaja de que no req
 que el usuario provea la definición del scope para la generación exhaustiva acotada. 
 Además, \textsf{FRC} podría ser más escalable que \textsf{FGE} en casos donde
 la cantidad de objetos sea demasiado grande para ser generados de manera
-exhuastiva (por ejemplo, en clases con invariantes de representación más débiles
+exhaustiva (por ejemplo, en clases con invariantes de representación más débiles
 que los evaluados aquí).
 De cualquier modo, los resultados preliminares muestran que los algoritmos 
 son mucho más lentos con la función objetivo \textsf{FRC}. Se deja como trabajo 
@@ -288,12 +288,12 @@ demasiado porque es muy lento.}
 Se observan tres patrones claros. Primero, \textsf{HC+FRC} y \textsf{HC+FGE} encuentra el conjunto de métodos generadores,
 minimal, para las doce clases analizadas.
 Segundo, \textsf{GA+FGE} obtiene resultados muy cercanos al \emph{minimal} en la mayoría de los casos, 
-con algun método de mas en algunas clases (\texttt{NCL}, \texttt{TreeMap}, \texttt{TreeSet}, \texttt{HashSet}).
+con algún método de mas en algunas clases (\texttt{NCL}, \texttt{TreeMap}, \texttt{TreeSet}, \texttt{HashSet}).
 Por último, \textsf{GA+FRC} muestra un comportamiento correcto pero con un costo computacional considerablemente mayor, 
 por lo que no resulta competitivo en términos de eficiencia.
 }
 
-\cacho{Revisar esto, cambie la tabla, arregle lits (tiene pinta de TO) y treemap, me da alguna vez algun metodo de mas, se mete un metodo que se usa para cubrir codigo que no es importante}
+\cacho{Revisar esto, cambie la tabla, arregle lits (tiene pinta de TO) y treemap, me da alguna vez algun método de mas, se mete un método que se usa para cubrir código que no es importante}
 Estas desviaciones tienen dos causas principales. Por un lado, en \textsf{GE} la
 evaluación se realiza por enumeración acotada; bajo scope fijo y valores
 iniciales concretos, ciertas combinaciones pueden no ser alcanzables sin
@@ -424,10 +424,10 @@ nuestro enfoque (denominada \textsf{R-Serialize-MGO}, ver sección \ref{sec:obje
 
 A fin de evaluar y comparar el impacto de cada enfoque, se utilizó el benchmark basado en clases 
 del paquete \texttt{java.util} debido a su rica API que tienen: \texttt{HashSet}, \texttt{HashMap}, \texttt{TreeMap}, \texttt{TreeSet} y \texttt{LinkedList}.
-Ademas, para poder utilizar todos los \emph{benchamark} se necesita escribir test parametrizados para todos, siendo esta, una tarea laboriosa.
+Además, para poder utilizar todos los \emph{benchamark} se necesita escribir test parametrizados para todos, siendo esta, una tarea laboriosa.
 Las métricas consideradas fueron: el tiempo 
 de generación (\textsf{GTime}), este tiempo es el que se le da cada herramienta para ejecutar.
-Ademas se tuvo en cuenta las metricas de la cantidad de casos de prueba ejecutados (\textsf{Test}), el 
+Además se tuvo en cuenta las métricas de la cantidad de casos de prueba ejecutados (\textsf{Test}), el 
 tiempo total de ejecución de la test suite (\textsf{T(Seg)}), la cobertura de ramas alcanzada 
 (\textsf{Ramas}) y la cantidad de mutantes eliminados (\textsf{Mutacion}). Es importante destacar 
 que la test suite parametrizada es común a los enfoques \textsf{R-Serialize}, \textsf{R-Builders}, permitiendo así una comparación justa sobre los objetos generados. En el caso de 
@@ -441,7 +441,7 @@ Las tablas anteriores, demuestran que los resultados obtenidos con \textsf{R-Ser
 \textsf{R-Serialize-MGO} mejora la cobertura de ramas y mutación con sus objetos generados a partir de los métodos generadores identificados previamente.
 En particular, se obtiene una mejora en las clases \texttt{TreeSet}, \texttt{TreeMap} y \texttt{HashMap} y logrando empatar con \texttt{R-Serialize-API} en \texttt{LinkedList} y \texttt{HashSet}.
 Estos resultados evidencian que los métodos generadores de objetos identificados son efectivos para producir entradas de alta calidad para testing, mejorando la capacidad de detección de fallas.
-Ademas, podemos afirmar que los MGO son utiles para mejorar las herramientas de testing automatico como Randoop.
+Además, podemos afirmar que los MGO son útiles para mejorar las herramientas de testing automático como Randoop.
 
 
 \cacho{Explico tabla por tabla?}
@@ -528,7 +528,7 @@ presenta en la Figura \ref{lst:driverAPI}. Por otro lado, el enfoque
 \textsf{MGO} consiste en usar sólo los métodos generadores de objetos para
 construir los drivers, como se muestra en el ejemplo de la Figura \ref{lst:driverBLD}.
 \cacho{Nuevo}Los métodos generadores de objetos fueron precomputados usando el algoritmo de \textsf{Hill Climbing} (\ref{alg:approachHC}) 
-con la función objetivo que utiliza los objectos que produce el generador exhaustivo acotado (\ref{sec:fitnessGE})
+con la función objetivo que utiliza los objetos que produce el generador exhaustivo acotado (\ref{sec:fitnessGE})
 
 \input{tables/tableJPFBuilders.tex}
 \input{tables/tableJPFBuilders1.tex}
@@ -541,7 +541,7 @@ Se observa una reducción considerable en el tiempo de análisis y en la cantida
 de estados explorados por JPF, sin 
 comprometer la cobertura de las estructuras objetivo. \pp{Qué cobertura?
 tenemos números de cobertura para mostrar que no se reduce? O algún experimento
-por el estilo?} \cacho{Lo sacamos, no hay nada de esto, la idea era como decir que no se pierden estructuras, que se aseguran que estan las mismas y mas}
+por el estilo?} \cacho{Lo sacamos, no hay nada de esto, la idea era como decir que no se pierden estructuras, que se aseguran que están las mismas y mas}
 
 %Para focalizar la comparación en los distintos casos, 
 %consideramos en cada clase–método todos los niveles de \emph{scope} que finalizan sin \emph{timeout}
@@ -1001,7 +1001,7 @@ detectar manualmente, y que \textsf{BEAPI} puede ser de gran ayuda para esta tar
 
 En el experimento de MGO (ver \ref{sec:object_builders_randoop}), generamos objetos utilizando los MGO y toda la API junto con la herramienta \texttt{Randoop} y los empleamos posteriormente en un conjunto de tests parametrizados, con el objetivo de evaluar su impacto en la cobertura.
 
-En esta seccion, evaluamos la calidad de los objetos generados por BEAPI en el contexto del testing parametrizado.
+En esta sección, evaluamos la calidad de los objetos generados por BEAPI en el contexto del testing parametrizado.
 Para ello, comparamos BEAPI con los mismo enfoques de generación aleatoria utilizados en la Sección \ref{sec:object_builders_randoop}:
 
 
@@ -1034,9 +1034,9 @@ de manera eficiente.
 
 La Tabla \ref{tab:treeSetTools_beapi} presenta los resultados obtenidos para \texttt{TreeSet}. En 
 este caso, las diferencias comienzan a notarse con mayor claridad. 
-\textsf{BEAPI} alcanza una cobertura de ramas y mutación mejor en cuanto a mutantes matados con respecto a las otras tecnicas.
-En el caso de la tabla \ref{tab:treeMapTools_beapi}, se observa que se mantiene la tendencia de que los objectos generados por BEAPI son efectivos para testing parametrizado, logrando coberturas competitivas con tiempos de generación muy bajos.
-En este caso, \textsf{BEAPI} alcanza una cobertura de ramas y mutación superior pero se necesitaron 30 segundos, lo cual sigue siendo un tiempo bajo ya que la mejor tecnica (\texttt{R-Serialize-MGO}) necesita 180 segundos para lograr una cobertura similar.
+\textsf{BEAPI} alcanza una cobertura de ramas y mutación mejor en cuanto a mutantes matados con respecto a las otras técnicas.
+En el caso de la tabla \ref{tab:treeMapTools_beapi}, se observa que se mantiene la tendencia de que los objetos generados por BEAPI son efectivos para testing parametrizado, logrando coberturas competitivas con tiempos de generación muy bajos.
+En este caso, \textsf{BEAPI} alcanza una cobertura de ramas y mutación superior pero se necesitaron 30 segundos, lo cual sigue siendo un tiempo bajo ya que la mejor técnica (\texttt{R-Serialize-MGO}) necesita 180 segundos para lograr una cobertura similar.
 
 % \texttt{R-Builders} logra 
 % una cobertura y mutación ligeramente superior a \texttt{BEAPI}. 
@@ -1069,7 +1069,7 @@ de inserciones y eliminaciones.
 
 Con respecto a la tabla  \ref{tab:hashMapTools_beapi}, 
 correspondiente a \texttt{HashMap}, se aprecia un caso 
-similar. \textsf{BEAPI} logra altos niveles de cobertura con tiempos de generación de 89 segundos, para alcanzar el maximo de cobertura que se puede obtener.
+similar. \textsf{BEAPI} logra altos niveles de cobertura con tiempos de generación de 89 segundos, para alcanzar el máximo de cobertura que se puede obtener.
 En este caso \textsf{R-Serialize-MGO} se acerca a ese valor pero no llega al mismo en 180 segundos.
 
 
@@ -1077,7 +1077,7 @@ Los resultados obtenidos permiten concluir que los objetos generados por \textsf
 efectivos y eficientes para ser utilizados en tests parametrizados. Aunque la cantidad total de 
 objetos generados es menor, su calidad y representatividad permiten alcanzar los máximos niveles 
 de cobertura con una mínima ejecución. Además, se observa que guiar a generadores aleatorios como 
-Randoop mediante la identificación previa de métodos generadores de objectos también mejora significativamente 
+Randoop mediante la identificación previa de métodos generadores de objetos también mejora significativamente 
 la cobertura. Esto hace que se reafirme el valor del otro aporte de esta tesis: la identificación automática de métodos generadores.
 Este conocimiento no solo permite mejorar herramientas existentes como Randoop (caso de \textsf{R-Builders}), 
 sino que también da lugar a técnicas completamente nuevas como \textsf{BEAPI}, 
@@ -1136,13 +1136,13 @@ Una explicación es que varios mutantes exitosos están asociados a rutas de có
 por ejemplo, secuencias largas con inserciones/eliminaciones que pasan por estados transitorios (similar a los casos de \texttt{TreeMap} y \texttt{Treeset}). 
 \textsf{R-Builders}, al explorar más operaciones y estados no canónicos, tiende a tocar esos caminos y matar esos mutantes extra, aunque al costo de mucha más ejecución. 
 De hecho, en ramas \textsf{BEAPI} iguala o supera a \textsf{R-Builders} ( 122 vs 119 a partir de 
-GTime=10), reforzando la idea de que la ventaja de \textsf{R-Builders} en mutación proviene de probar más tipos de operaciones y estados que por cubrir mejor el nucleo de la estructura.
+GTime=10), reforzando la idea de que la ventaja de \textsf{R-Builders} en mutación proviene de probar más tipos de operaciones y estados que por cubrir mejor el núcleo de la estructura.
 
 Los resultados obtenidos permiten concluir que los objetos generados por \textsf{BEAPI} son 
 efectivos y eficientes para ser utilizados en tests parametrizados. Aunque la cantidad total de 
 objetos generados es menor, su calidad y representatividad permiten alcanzar los máximos niveles 
 de cobertura con una mínima ejecución. Además, se observa que guiar a generadores aleatorios como 
-Randoop mediante la identificación previa de métodos generadores de objectos también mejora significativamente 
+Randoop mediante la identificación previa de métodos generadores de objetos también mejora significativamente 
 la cobertura. Esto hace que se reafirme el valor del otro aporte de esta tesis: la identificación automática de métodos generadores.
 Este conocimiento no solo permite mejorar herramientas existentes como Randoop (caso de \textsf{R-Builders}), 
 sino que también da lugar a técnicas completamente nuevas como \textsf{BEAPI}, 
